# Distributed-RL

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: activations.h  metrics.h  nn.h  rng.h
include/algorithms/: common.h  policy.h  reinforce.h  utils.h
include/distributed/: comm.h  mpi_utils.h
include/environments/: cartpole.h  common.h
include/nn/: activations.h  debug.h  linear.h  mlp.h  optimizers.h
src/: activations.c  main.c  metrics.c  nn.c  rng.c
src/algorithms/: common.c  policy.c  reinforce.c  utils.c
src/distributed/: comm.c  mpi_nn.c  mpi_utils.c
src/environments/: cartpole.c
src/nn/: activations.c  debug.c  linear.c  mlp.c  optimizers.c
test/: test_gradient.c  test_mlp.c  test_overfitting.c  test_utils.c
